# glfw3_prj

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp  uilt.cpp
data/: ball.dae  cube.f  cube.v  eq.f  model.dae  shader.f  shader.v
include/: stb_image.h  uilt.h
